# rnr

./: .gitignore  .gitmodules  README.md  profile.sh
backend/src/: main.rs  models.rs
clients/common/: api.js  auth.js  data.js  maps.js  util.js
clients/mobile/: App.tsx  metro.config.js  package-lock.json
clients/mobile/src/components/: AlbumsHorizontal.tsx  Separator.tsx
clients/mobile/src/components/auth/: LoggedOut.tsx  Login.tsx  Register.tsx  Verify.tsx
clients/mobile/src/constants/: preloadImages.js
clients/mobile/src/navigation/: Stack.tsx  StackHome.tsx
clients/mobile/src/screens/: Home.tsx  Search.tsx
clients/python/requirements/: common.txt  dev.txt
core/: base_donkey_deploy.sh  parse_template.py  requirements.txt  yaml_to_env.py
env/: activate.py  alias.bash  dev.env  docker.env  local.env  prod.env
projects/rnr-project/: deploy.sh
projects/rnr-project/service_templates/backend/: deployment.yaml
projects/rnr-project/services/backend/: .gitignore  Cargo.toml
projects/rnr-project/services/backend/migrations/2019-11-22-171550_users/: up.sql
projects/rnr-project/services/backend/src/: jwt_auth.rs  main.rs  models.rs
server/: flush_env.sh
server/src/: util.rs
server/src/models/: user.rs
server/src/routes/: user.rs
services/api/src/models/: user.rs
services/backend/: Cargo.toml
services/backend/migrations/2019-11-22-171550_users/: up.sql
services/backend/src/: json_bodies.rs  jwt_auth.rs  main.rs  models.rs
services/backend/src/models/: schema.rs
