[package]
name = "rnr"
version = "0.0.1"
publish = false

license = "Apache"

[dependencies]
rocket = "0.4.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
# jsonwebtoken = "0.1"

[dependencies.rocket_contrib]
version = "0.4.0-rc.1"
features = ["diesel_postgres_pool"]
